JewishCampusConnect/mdapi-source/Jewish Campus Connections/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Follow_Up_Notes__c</fullName>
        <label>Follow Up Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Follow_Up__c</fullName>
        <label>Follow Up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interaction_Type__c</fullName>
        <label>Interaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>One-on-one Meeting</fullName>
                </value>
                <value>
                    <fullName>Met for Coffee</fullName>
                </value>
                <value>
                    <fullName>Met for Lunch</fullName>
                </value>
                <value>
                    <fullName>Messaging</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spiritual_Milestone__c</fullName>
        <label>Spiritual Milestone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tefillin</fullName>
                </value>
                <value>
                    <fullName>Mezuzah</fullName>
                </value>
                <value>
                    <fullName>Shabbat Candles</fullName>
                </value>
                <value>
                    <fullName>Learning</fullName>
                </value>
                <value>
                    <fullName>Dvar Torah</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>